/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds/
 */
subprojects {

    afterEvaluate {
        sourceCompatibility = 11
        targetCompatibility = 11

        repositories {
            jcenter()
        }

        dependencies {
            testImplementation(
                    'org.junit.jupiter:junit-jupiter-api:5.3.1',
                    'com.netflix.feign:feign-core:8.18.0',
                    'com.netflix.feign:feign-okhttp:8.18.0',
                    'com.netflix.feign:feign-gson:8.18.0'
            )
            testRuntimeOnly(
                    'org.junit.jupiter:junit-jupiter-engine:5.3.1',
                    'com.netflix.feign:feign-core:8.18.0',
                    'com.netflix.feign:feign-okhttp:8.18.0',
                    'com.netflix.feign:feign-gson:8.18.0'
            )

        }


//        compileJava {
//            doFirst {
//                options.compilerArgs = [
//                        '--module-path', classpath.asPath,
//                ]
//                classpath = files()
//            }
//        }
//
//        javadoc {
//            inputs.property("moduleName", moduleName)
//            doFirst {
//                options.addStringOption('-module-path', classpath.asPath)
//            }
//        }
//
//
//
//
//        compileTestJava {
//            inputs.property("moduleName", moduleName)
//            doFirst {
//                options.compilerArgs = [
//                        '--module-path', classpath.asPath,
//                        '--add-modules', 'org.junit.jupiter.api',
//                        '--add-modules', 'feign.core',
//                        '--add-reads', "$moduleName=org.junit.jupiter.api",
//                        '--add-reads', "$moduleName=org.junit.platform.commons",
//                        '--add-reads', "$moduleName=feign.core",
//                        '--add-reads', "$moduleName=feign.gson",
//                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
//                ]
//                classpath = files()
//            }
//        }




        test {
            useJUnitPlatform()
            environment "JIGSAW", "TRUE"

            testLogging {
                events "passed", "skipped", "failed", "standardOut", "standardError"
                showExceptions true
                showCauses true
                showStackTraces true

                info.events = debug.events
                info.exceptionFormat = debug.exceptionFormat

                afterSuite { desc, result ->
                    if (!desc.parent) {
                        def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
                        def startItem = '|  ', endItem = '  |'
                        def repeatLength = startItem.length() + output.length() + endItem.length()
                        println('\n' + ('-' * repeatLength) + '\n' + startItem + output + endItem + '\n' + ('-' * repeatLength))
                    }
                }
            }


//            inputs.property("moduleName", moduleName)
//            doFirst {
//                // can't access to file in resources directory => copy to java classes directory
//                copy {
//                    from "$projectDir/src/main/resources"
//                    into "$buildDir/classes/java/main/"
//                }
//
//                jvmArgs = [
//                        //'--show-module-resolution',
//                        '--module-path', classpath.asPath,
//                        '--add-modules', 'ALL-MODULE-PATH',
//                        '--add-reads', "$moduleName=org.junit.jupiter.api",
//                        '--add-reads', "$moduleName=org.junit.platform.commons",
//                        '--add-reads', "$moduleName=feign.core",
//                        '--add-reads', "$moduleName=feign.gson",
//                        '--add-exports', "$moduleName/$moduleName=org.junit.jupiter.api",
//                        '--add-exports', "$moduleName/$moduleName=org.junit.platform.commons",
//                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
//                ]
//                classpath = files()
//
//            }
        }

    }
}
